--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Javascript -->
-    <style src="js/scripts.js"></style>
+    <style src="js/scripts.js" defer></style>
 </head>
 <body>
-    
+    <div id="calc">
+        <h3>Calculadora</h3>
+        <div id="operations">
+            <div id="previous-operation"></div>
+            <div id="current-operation"></div>
+        </div>
+    </div>
 </body>
 </html>
